--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-276.1KB/s(Youtube:不良林), server: us02.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us02.gogogoo.cyou}}
-  - {name: 🇨🇳 中国-263.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 167.88.63.79, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 167.88.63.79, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-371.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 台湾-10.43MB/s(Youtube:不良林), server: 61.222.202.140, port: 33792, type: vmess, uuid: e55cd182-01b0-4fb7-a510-363701a491c5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 61.222.202.140}}
+  - {name: 🇨🇳 中国-238.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 167.88.63.79, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-298.1KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 未知国家-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇺🇸 美国-319.6KB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
   - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 未知国家-276.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-298.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
 rules:
