--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-473.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-847.7KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-292.5KB/s(Youtube:不良林), server: jp.v2yyds.cc, port: 35212, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: jp.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 未知国家-3.43MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
-  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇭🇰 香港-1.52MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-374.4KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-186.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-398.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-222.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-309.0KB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-2.52MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.45MB/s(Youtube:不良林), server: 103.173.255.234, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.65MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-473.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-847.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 未知国家-3.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-374.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-186.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-398.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-309.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.52MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.45MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
